<resources>
    <string name="app_name">Bengali Geonames</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="title_activity_data_push">Data Push</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="application_name">Application Name</string>
    <string name="application_type">Application Type</string>
    <string name="dev_email">Developer Email</string>
    <string name="register_user">Register User</string>
    <string name="register_app">Register App</string>
    <string name="user_name">User Name</string>
    <string name="send_data">Send Data</string>
    <string name="user_key">User Key</string>
    <string name="app_key">App Key</string>
    <string name="location_name">Location Name</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="elevation">Elevation</string>
    <string name="generated_token_label_text">Your Generated Token will be shown below</string>
    <string name="location_type">Location Type</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_use_real_location">Use GPS to obtain location info</string>
    <string name="pref_description_use_real_location">
        Please enable it only if you are under open sky, where GPS is available.
    </string>
    <string name="openshift_server" translatable="false">http://geocrowdsource-geosource.193b.starter-ca-central-1.openshiftapps.com/</string>
    <string name="local_server" translatable="false">http://192.168.19.77:8899/</string>


    <string name="select_server_for_testing">Select server for testing application</string>
    <string-array name="pref_server_address_titles">
        <item>Local Server</item>
        <item>Openshift Server</item>
    </string-array>
    <string-array name="pref_server_address_values">
        <item>@string/local_server</item>
        <item>@string/openshift_server</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="location_access_rationale">Location access is required to get longitude and latitude.</string>
    <string name="ok">OK</string>
    <string name="requesting_location_permission">Permission is not available. Requesting Location permission.</string>
    <string name="location_persmission_granted">Location permission was granted.</string>
    <string name="location_permission_denied">Location Permission was denied. Using dummy location data.</string>
    <string name="slash">/</string>
    <string name="latLongAlt">Lat/Long/Alti</string>
</resources>
