<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_location_type"
        android:layout_width="0dp"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/location_type"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/et_location_type"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/et_location_type"
        android:layout_width="266dp"
        android:layout_height="@dimen/editText_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/location_type"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/tv_data_altitude"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/altitude"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/et_data_altiutde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/et_data_altiutde"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_vertical"
        android:hint="@string/latitude"
        android:text="@string/altitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_data_altitude"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_user_key"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/user_key"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_user_key"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center|center_vertical"
        android:hint="@string/user_key"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_user_key"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_key"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/app_key"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_key" />

    <TextView
        android:id="@+id/et_app_key"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_vertical"
        android:text="@string/app_key"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_app_key"
        app:layout_constraintTop_toBottomOf="@+id/et_user_key" />

    <TextView
        android:id="@+id/tv_location_name"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/location_name"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_key" />

    <EditText
        android:id="@+id/et_location_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/editText_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/location_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_location_name"
        app:layout_constraintTop_toBottomOf="@+id/et_app_key" />

    <TextView
        android:id="@+id/tv_data_longitude"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/longitude"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/et_data_longitude"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintStart_toEndOf="@+id/et_data_latitude"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/et_data_longitude"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_vertical"
        android:text="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintStart_toEndOf="@+id/tv_data_longitude"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_data_latitude"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/latitude"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/et_data_latitude"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/et_data_latitude"
        android:layout_width="0dp"
        android:layout_height="@dimen/single_line_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_vertical"
        android:hint="@string/latitude"
        android:text="@string/latitude"
        app:layout_constraintEnd_toStartOf="@+id/tv_data_longitude"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintStart_toEndOf="@+id/tv_data_latitude"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/title_activity_data_push"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_data_result"
        android:layout_width="200dp"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="270dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="124dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="163dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="283dp" />

</android.support.constraint.ConstraintLayout>

